--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.33]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.38]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -69,6 +69,268 @@
 
 
 
+
+
+
+
+
+    <a></a>
+    [나는 4시간만 일한다 124p] 만약 당신이 아주 작은 일까지 이래라저래라 하는 기업가라면, 어떤 일을 세상의 다른 사람들보다 더 잘할 수 있더라도 그게 사소한 일이라면 당신이 할 일이 아니라ㅣ고 생각하라. 당신을 방해하지 않고 스스로 처리할 수 있도록 권한을 주라. 요컨대 당신이 싸워서 얻어야 할 것에 대해서만 권한을 갖도록 하라는 말이다.<br>
+    당신에게 유리하도록 규칙을 정하라. 시간을 마음대로 방해하지 못하게 재한하고, 사람들과 시간을 보내기 전에 그들이 당신에게 요청할 사항을 미리 정해 놓도록 하며, 더 중요한 프로젝트를 미루지 않도록 일상적인 허드렛일들은 한꺼번에 일괄 처리하라. 사람들이 당신을 방해하게 두지 마라. 집중할 수 있다면 당신만의 라이프스타일을 찾을 수 있다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 123p] 사람들은 당신이 생각하는 것보다 훨씬 더 똑똑하다. 그들에게 스스로를 증명할 기회를 주라.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 103p] 필요할 때는 깐깐해지도록 하라. 인생에서도 마찬가지로 자기주장이 강하다는 평을 받으면 매번 부탁하거나 싸울 필요 없이 제대로 된 대우를 받는 데 유리하다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 96-97p] 나는 당신에게 선택적으로 무지해질 수 있는 기이한 능력을 계발하라고 제안할 것이다. 무지는 행복이기도 하고 게다가 실리적이다. 관련 없거나, 중요하지 않거나, 실행에 옮길 수 없는 모든 정보와 장애물들을 무시하는 법을 터득하는 건 꼭 필요하다. 가장 좋은 건 이 세 가지 경우 모두를 무시하는 것이다.<br>
+    이를 위한 첫 단계는 정보를 다이어트하는 법을 계발하여 지속적으로 실행하는 것이다. 현대인들이 칼로리를 너무 많이, 그것도 영양가 없는 칼로리를 너무 많이 섭취하는 것처럼, 정보 노동자도 정보를 과도하게, 그것도 잘못된 정보원으로부터 얻는다.<br>
+    라이프스타일 디자인은 실천력, 즉 성과에 기초를 두고 있다. 성과를 높이려면 정보량을 줄이는 건 필수적이다. 대부분의 정보는 시간만 많이 잡아먹고, 부정적이며, 당신의 목표와 관련이 없고, 당신의 영향권 밖에 있다. 당신이 오늘 읽거나 본 것 네 가지 중에 적어도 반은 그럴 거라고 나는 감히 말할 수 있다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 94p] 거시적, 미시적 단계에서 파킨슨 법칙을 활용하라.<br>
+    더 적은 시간에 더 높은 성과를 올릴 수 있도록 파킨슨 법칙을 활용하라. 집중해서 일하고 미루지 않기 위해서는 일정과 마감시한을 짧게 잡아야 한다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 93-94p] 여러 가지 일을 한꺼번에 처리하지 마라.<br>
+    (중략) 만약 당신이 우선순위를 제대로 매긴다면, 여러 가지 일을 한꺼번에 처리할 필요가 없어진다. 사실 이것은 성과느느 낮은 데도 생산적이라는 위안을 얻고 싶어서 여러 가지 일을 하려는 것일 뿐이다. 다시 반복하자면, 하루의 주요 목표 또는 업무는 두 가지를 넘어서는 안 된다. 처음부터 끝까지 따로따로 일을 하라. 다른 데 정신이 흐트러지지 않게 말이다. 관심이 여러 곳으로 분산되면 일을 더 자주 중단하게 되고, 집중력도 저하되며, 최종 결과도 더 좋지 않고, 만족감도 덜하게 된다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 92-93p] '이것이 내가 오늘 한 유일한 일이라면, 나는 나의 하루에 대해 만족할 수 있는가?'라고 묻는 습관을 들여라.<br>
+    우선순위를 분명히 하지 않고는 일하러 가지도, 책상 앞에 앉지도 마라. 하루 종일 관련도 없는 이메일이나 읽고 머리만 뒤죽박죽 될 테니 말이다. 오늘 저녁이 가기 전에 내일 해야 할 일 목록을 작성해 놓도록 하라. (중략) 하루에 끝마칠 중요한 일은 절대 두 가지를 넘어서는 안 된다. 절대로 말이다! 그렇게 하는 게 실제로 효과가 높은지 어떤지는 중요하지 않다. 다들 그렇듯이 만약 당신이 여러 가지 일이 다 중요해 보여 결정을 못 하고 난감해하고 있다면, 각각의 일들에 대해 순서대로 자신에게 물어보라. '이것이 내가 오늘 해내는 유일한 일이라면, 나의 하루에 대해 만족할 수 있을까?'<br>
+    급해 보이는 일에 대한 반론을 제기하기 위해 스스로에게 물어보라. '이 일을 하지 않는다면 무슨 일이 벌어질까? 그리고 이 일을 하기 위해 중요한 일을 미루는 게 가치 있을까?' 만약 당신이 그날 해야 할 중요한 업무를 한 가지도 완수하지 못했다면, 연체료 5달러를 아끼려고 얼마 안 남은 업무 시간을 DVD를 반납하는 데 써서는 안 된다. 차라리 중요한 일을 처리하고 연체료를 내라.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 90p] 일하는 데 소요되는 대부분의 시간은 헛되이 흘러간다. 다시 말해 시간은 이용 가능한 양에 비례해 낭비하게 된다는 뜻이다.<br>
+    업무에서 쓸데없는 일들을 솎아 내고 시간적 자유를 얻으려면 받아들이는 정보의 양이 과도하지 않도록 제한해야 한다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 90p] 만약 당신이 꼭 해야 하는 중요 업무를 가려내지 않은 채 일의 완수를 위해 시작 시간과 완료 시간을 의욕적으로 잡는다면, 중요하지 않은 일이 중요하게 될 수도 있다. 무엇이 중요한지 안다고 하더라도 당신을 집중하게 만드는 마감시한이 없다면, 당신에게 주어진 자질구레한 업무는 점점 더 불어나게 될 것이다. 기업가는 잡무를 억지로 만들어 내게 될 것이고. 이 일은 다른 사소한 일이 생길 때까지 시간을 잡아먹다가, 결국 하루가 끝날 때까지 아무것도 한 일이 없게 만들 것이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 89p] 1. 근무 시간을 줄이기 위해서 중요한 일로만 업무를 제한하라. (80 대 20 법칙)<br>
+    2. 중요한 일로만 업무를 제한하기 위해서 근무 시간을 줄여라.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 89p] 파킨슨의 법칙에 따르면, 어떤 일을 완수하도록 주어진 시간에 비례하여 그 업무의 중요성과 복잡성은 점점 더 크게 인식된다. 마감시한이 임박했을 때 불가사의한 힘을 발휘하는 것도 바로 그 때문이다. 만약 프로젝트를 완수하는 데 24시간이 주어진다면 당신은 시간적 압박으로 인해 일의 실행에만 집중하면서 꼭 필요한 것들만 하게 된다. 똑같은 임무를 수행하는 데 일주일이 주어진다면, 6일 동안 별것도 아닌 일을 크게 벌여 씨름하게 된다. 제발 그런 일은 없어야겠지만, 만약 똑같은 인무를 수행하는 데 두 달이란 시간이 주어진다면 그 일은 그야말로 정신을 좀먹는 괴물로 변해 버린다. 게다가 마감시한이 짧으면 엄청난 집중력을 발휘하기 때문에 최종 결과가 마찬가지거나 오히려 높은 수준을 보이게 된다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 81p] 무엇을 하느냐가 어떻게 하느냐보다 훨씬 더 중요하다. 여전히 효율성도 중요하다. 하지만 '적절한' 일에 적용되지 않으면 소용없다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 81p] 1. 중요하지 않은 일을 잘한다고 해서 그 일이 중요해지는 것은 아니다.<br>
+    2. 많은 시간이 들어가는 일이라고 해서 그 일이 중요한 것은 아니다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 66p] 일어날 수 있는 최악의 상황은 비행기 사고나 화재가 아니다. 그것은 구제 불능의 지루함을 참을 만한 일로 받아들이게 되는 것이다.<br>
+    기억하라. 우리의 적은 지루함이지 어떤 추상적 개념의 '실패'가 아니라는 사실을.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 63p] 사랑의 반대는 무관심이고, 행복의 반대는 반박의 여지없이 지루함이다.<br>
+    흥분이야말로 실질적인 의미에서 행복의 동의어이고 당신이 추구하려고 노력해야 하는 것이다. 흥분은 만병통치약이다. 사람들이 당신에게 '열정'이나 '행복'을 추구하라고 권할 때, 사실 그들은 똑같은 하나의 개념에 주목한다. 그건 바로 '흥분'이다.<br>
+    다시 우리 이야기로 되돌아오자. 당신이 물어야 할 것은 "나는 무엇을 원하는가?"나 "나의 목표는 무엇인가?"가 아니라 "무엇이 나를 흥분시키는가?"이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 62p] 낚시도 사람들이 잘 가지 않는 곳이 더 잘 되듯이, ㄹ자신감이 부족한 세상의 다른 모든 사람들이 안타를 생각할 때 홈런을 노려야 치기 쉬운 법이다. 큰 목표를 위한 경쟁은 적기 마련이니까.<br>
+    큰일을 하려면 당연히 큰일을 필요로 해야 한다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 57p] 행동하지 않았을 때 일어날 수 있는 손실을 측정해 보라. 대부분의 실패는 일어날 가능성이 거의 없으며 설사 일어난다 해도 회복할 수 있다. 그리고 뛰어난 사람들이 즐겨 하는 것. 즉 '행동'을 갖아 중요한 습관으로 계발하라.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 56p] 우리가 가장 두려워하는 일은 대개 우리가 꼭 해야만 하는 일일 때가 많다. 그것이 전화이건 대화이건 무엇인건 간에, 우리가 해야 할 일을 못 하게 막는 것은 미지에 대한 두려움이다. 최악의 경우를 정의하고 받아들이고, 실행하도록 하라. 아예 이마에 새겨 넣어야 할 만큼 반복하겠다. 우리가 가장 두려워하는 일은 대개 우리가 꼭 해야만 하는 일이다. 인생에서의 성공은 주로 그 사람이 기꺼이 하는 불편한 대화의 정도에 따라 측정할 수 있다고 한다. 당신이 두려워하는 일을 날마다 한 가지씩 하겠다고 결심하라. 나도 조언을 얻기 위해 유명 인사나 뛰어난 사업가들에게 접촉을 시도하면서 이런 습관을 들이게 되었다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 44-45p] 부정적 스트레스(Distress)는 당신을 더 약하고, 자신감 없고, 열등하게 만드는 해로운 자극과 관련된다. 부정적인 비난, 혹사시키는 고용주, 길거리 연석에 얼굴을 부딪히는 것 등이 그런 예일 것이다. 이런 건 정말이지 피하고 싶다.<br>
+    반면에 긍정적 스트레스(Eustress)는 아마 대부분의 사람들이 거의 들어보지 못한 단어일 것이다. '건강한'이란 뜻의 그리스어 접두사 'Eu'가 쾌감(Euphoria)이란 단어에서와 마찬가지 의미로 사용되었다. 우리가 한계를 넘어설 수 있도록 추동하는 역할 모델들, 허리 군살을 없애기 위해 체력 단련을 하거나 편안하게 활동할 수 있는 영역을 확장시키려는 시도들은 모두 긍정적 스트레스, 즉 유익한 스트레스이자 성장을 위한 자극이다.<br>
+    비판을 받아들이지 못하는 사람들은 실패하기 마련이다. 우리가 피해야 하는 건 부정적인 비난이지 모든 형태의 비판이 아니다. 이와 마찬가지로 긍정적 스트레스 없이는 발전도 없다. 긍정적 스트레스를 더 많이 만들어 우리 인생에 적용할수록 꿈을 더 빨리 이룰 수 있다. 중요한 건 이 두 가지 스트레스를 구분하는 것이다.<br>
+    뉴리치는 부정적 스트레스를 없애고 긍정적 스트레스를 찾는 데 똑같이 적극적이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 41p] 원하는 것을 너무 많은 양으로, 너무 많은 수로, 너무 자주 가질 수 있다면, 당신은 오히려 이것을 원하지 않게 된다. 이것은 재산에도, 심지어는 시간에도 해당된다. 그러므로 라이프스타일 디자인은 한가한 시간을 과도하게 확보하는 데 있지 않다. 이것은 오히려 독이 된다. 라이프스타일 디자인은 자유 시간을 적극적으로 사용하는 데 관심을 두는 것이다. 간단히 말해 당신이 의무를 느끼는 일과 반대되는 개념인 당신이 원하는 일을 하는 것으로 정의할 수 있다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 40p] 갑옷의 모든 틈새를 고치려고 하는 대신 강점을 강화하는 게 훨씬 더 수지맞고 재미있다. 강점을 활용해 성과를 몇 배로 올릴 것이냐, 아니면 아무리 노력해 봐야 그저 그런 수준의 약점을 고쳐 나갈 것이냐 사이의 선택이다. 약점을 고치려고 애쓰느니, 당신이 가진 최고의 무기를 더 잘 활용하는 쪽에 초점을 맞춰라.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 38p] 의미 없는 일을 덜 함으로써 당신이 개인적으로 훨씬 더 중요한 일에 집중할 수 있다면, 일을 덜 하는 것은 게으름이 아니다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 35p] 만약 모든 사람이 무엇이 문제인지 밝히고 해결하는 데 한 가지 방식을 사용하였는데, 그 결과가 표준 이하로 나온다면 이때가 바로 '만약 내가 반대로 한다면 어떻게 될까?'라고 질문할 순간이다. 결과를 제대로 내지 못하는 모델은 따라서는 안 된다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 34p] 다르다는 것은 그것이 더 효과적이거나 더 재미있을 때에만 좋은 것이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 32p] 선택의 권리, 선택할 수 있는 능력이야말로 진정한 힘이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 32p] 시간과 장소에서 자유로워질 수 있다면, 당신의 돈은 저절로 3배에서 10배 정도 더 가치가 있다.<br>
+    이것은 환율과는 아무 상관없다. 재정 면에서 부유하다는 것과 백만장자처럼 살 능력이 있다는 것은 근본적으로 전혀 다른 것이다.<br>
+    당신이 인생에서 통제할 수 있는 W의 개수에 따라, 돈은 실질적인 가치 면에서 몇 배로 늘어날 수 있다. 무엇(What)을 하고, 언제(When) 하고, 어디(Where)에서 하고, 누구(with Whom)와 함께 하느냐에 따라서 말이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 16p] 사람들은 백만장자가 되기를 바라는 게 아니다. 정작 사람들은 그들이 생각하기에 백만장자만이 누릴 수 있는 삶을 경험하고 싶은 것뿐이다.
+    <br><br>
+
+    <a></a>
+    [나는 4시간만 일한다 9p] 경제적 하향기는 저렴한 기반 체제를 제공한다. 저렴한 비용으로 뛰어난 프리랜서를 고용할 수 있고 최저가에 광고 계약을 할 수 있다. 낙관적인 시대에는 모두 불가능한 것들이다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 223p] 누구나 평생 함께 어울리게 되는 돈. 의무교육에서는 배우지 못하는 '돈의 교양'을 올바르게 깨우치고 양성하는 것이 여유로운 인생을 만들 뿐 아니라 더 나은 인격을 형성시켜준다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 222-223p] "돈이란 신용을 가시화한 것이다."<br>
+    조커가 "자네에게 돈을 가져오는 건, 반드시 '자신'이 아닌 '다른 사람'이야."라고 말했듯이 돈은 신용이 있는 사람에게만 전달된다. 그리고 신용이 높으면 그만큼 많은 돈이 '기회'라는 얼굴로 접근한다.<br>
+    신용은 지난 행동들의 결과이고, 지난 행동은 하루하루 사고해온 결과이다. 요컨대, 하루하루의 사고가 행동을 만들고, 그 행동이 신용을 만들며, 그 신용이 결과적으로 돈이라는 형태로 나타나는 것이다.<br>
+    학교에 가서 공부를 하고, 친구들과 약속을 하고, 직장에서 착실하게 일을 하는 것도 모두 신용을 얻기 위해 하는 행동이다. 그리고 신용을 얻으면 돈이라는 형태로 남게 되고, 그 돈은 선택지를 늘려주는 도구가 된다. 그리고 그 도구가 증가하면 한층 더 알찬 라이프스타일이 실현된다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 221-222p] "나는 자네에 대해 유추했지. 분명히 돈의 지배를 받고 있을 거라고."<br>
+    (중략) 돈의 많고 적음에 따라 사회적 지위가 결정되고 돈에 대한 지나친 집착으로 가족애나 우정이 깨지는 두려움, 돈을 얼마나 소유하는지에 따라 인생이 결정되고 그릇된 방향으로 향할 수 있다는 무서움, 돈보다 중요한 것은 전혀 보이지 않게 되는 공포... 그것들이 모두 이 한마디에 담겨 있다.<br>
+    "나와 일 중에서 뭐가 더 중요해?"라는 물음은 연인 사이에 종종 오가는데, 당연히 나(사랑 혹은 우정)도 일(돈)도 중요하다. 즉, 삶의 질을 높이려면 그중 어느 하나가 아니라 반드시 이 두 영역 모두 향상시켜야 한다. 그리고 그러기 위한 열쇠를 지녀야만 돈에 지배당하지 않고 돈과 사이좋게 공생하는 힘을 얻게 된다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 220-221p] "실패란, 결단을 내린 사람만이 얻을 수 있는 거니까."<br>
+    이는 일반적으로 실패란 단순히 돈이 줄었음을 가리키지만, 거기에서 얻을 수 있는 '경험의 가치'는 아주 크다는 메시지를 담고 있다.<br>
+    실패를 하고 싶지 않다고 생각하는 사람들은 대부분 '내가 가진 돈을 줄어들게 하고 싶지 않다.'는 생각에 사로잡혀 있다.<br>
+    다시 말해, 이미 그 인생은 돈 때문에 도전하지 못하는 인생이 되어 있음을 뜻한다. 그리고 조커는 그렇게까지 돈의 영향을 받고 사는 사람들에게, 무엇보다 자신이 돈을 어떻게 다루는지부터 돌아볼 것을 간곡히 전한다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 220p] "자네에게 돈을 가져오는 건 반드시 '자신'이 아닌 '다른 사람'이야."<br>
+    이는 자신이 아니라 주변 사람들이 자신의 그릇을 판별해서 거기에 맞는 기회를 가져온다는 것을 뜻한다. 즉, 그릇이 준비가 안 된 상태에서는 그 그릇보다 큰 기회가 굴러오지 않는다. 역으로 해석하면, '자신이 해결하지 못하는 문제는 자신에게 오지 않는다.'고도 볼 수 있다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 220p] "사람에게는 각자 자신이 다룰 수 있는 돈의 크기가 있거든."<br>
+    이 말은 자기 자신의 그릇이 커져야 그에 맞는 큰 돈이 들어온다는 뜻이다. 즉, 그릇이 크지 않다면 어쩌다 우연히 큰돈이 들어왔다 해도 언젠가 모두 나가버린다.
+    <br><br>
+
+    <a></a>
+    [부자의 그릇 219-223p] "돈은 그 사람을 비추는 거울이야.""<br>
+    (중략) 돈이란 사고와 행동의 결과가 그대로 드러난 산물이며, 우리의 사고방식에도 크게 영향을 미치고 있는 것이다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 352-353p] 인간의 마음이 설계된 목적, 즉 인간의 마음이 어떤 목적을 수행하게끔 자연선택에 의해 설계되었는지 질문한다면, 우리 마음뿐만 아니라 우리 자신의 행동까지 더 잘 이해할 수 있다. 예컨대 공포라는 정서는 외부의 위협으로부터 자신을 보호하게끔 설계되었다. 공포 덕분에 우리는 다른 사람들과 함께 똘똘 뭉쳐서 적과 맞서 싸우는 등의 적응적 행동을 하게 된다. 이러한 진화적 관점에 따르면, [전설의 고향] 같은 공포드라마를 보고 나서 한창 두려움에 떠는 시청자에게 "오직 당신만을 위한 이 한정판을 구매해서 남들과 다른 사람이 되세요."처럼 희소성 호소하는 CF를 들이대는 짓은 마치 "남들과 함께 여행을 갔다면, 밤에 혼자서 몰래 숙소를 빠져나와 고독을 즐기세요."라고 떠벌리는 격이다. (중략) 반면에 두려움에 떨면서 다른 사람들 사이에서 평안함을 찾고자 하는 시청자에게 "이미 1000만 명이 이 제품을 쓰고 있습니다."처럼 사회적 인증에 호소하는 CF는 대단히 효과적으로 다가올 것이다.<br>
+    로맨틱한 정서는 어떤 행동을 유발할까? 바람직한 배우자의 간택을 받으려면 자신은 다른 동성 경쟁자들과 비교할 수 없는 특출난 자질을 지녔음을 적극적으로 광고해야 한다. 그러므로 [겨울연가] 같은 멜로드라마를 보고 나서 한창 자신은 다른 동성 경쟁자들과 차별화된 존재라며 들떠 있는 시청자에게 "이미 1000만 명이 이 제품을 쓰고 있습니다."라는 CF는 "당신도 사실 다른 동성들과 다를 바 하나 없는 평범한 사람입니다."라고 떠벌리는 격이다. 소개팅 자리에 나간다면 조금이라도 특이하고 인상적인 복장이나 액세서리를 하고 나가야 하지 않겠는가. 그런 점에서 "오직 당신만을 위한 이 한정판을 구매해서 남들과 다른 사람이 되세요."라는 CF는 로맨틱한 정서에 빠진 시청자들에게 대단히 솔깃하게 들릴 것이다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 346p] 자원이 없어서 고생하는 이가 순전히 운이 나빠서 그렇게 된 것인지 아니면 노력이 부족해서 그렇게 된 것인지에 따라서 우리의 자원을 그들과 공유하는 심리는 아주 다른 방식으로 작동하게끔 진화하였다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 336-337p] 다른 동물들과 달리 인간은 생전 처음 본 상대와의 일회성 상호 작용에서도 선뜻 협력할 뿐만 아니라, 남에게 손해를 끼치는 얌체 사기꾼은 자신의 손해를 감수하면서까지 이타적으로 처벌하는 성향을 진화시켰다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 244p] 일반적인 기억이란 없다. 배우자의 부정에 관련된 기억, 서식처 선택에 관련된 기억, 사기꾼 탐지에 관련된 기억 등등처럼 영역 특이적(domain-specific)인 기억들이 존재할 뿐이다.<br>
+    우리가 아득한 과거에 수렵-채집 생활을 하던 진화적 조상의 생존과 번식을 좌우했던 문제들에 관련된 정보들을 특히 더 잘 기억하게끔 진화했다는 통찰은 단순한 지적 유희에서 머물지 않는다. 어떤 항목들에 대한 기억력을 효과적으로 증진하는 방안을 찾는데 실질적인 도움을 줄 수 있다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 242p] 기억은 배우자 선택, 주거지 선택, 포식동물 회피, 병원균 회피 등등 우리의 진화적 조상이 수렵-채집 생활을 하면서 시시각각 내려야 했던 수많은 결정을 뒷받침하기 위해 예전에 비축해 둔 정보들을 추가로 활용하게끔 진화하였다. 즉, 지금 당장 여기서 얻을 수 있는 정보들에만 기대기보다, 이와 유사한 상황에서 활용했던 과거의 정보들도 끄집어내어 더 빠르고 정확한 의사결정을 돕기 위함이라는 것이다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 이처럼 혼자 있는 시간을 가지는 것은 자기 돌봄self-care에 도움이 된다. 자기를 돌본다는 것은 자신이 살면서 이룩하고 싶은 것에 집중하는 데 탁월한 기술이라고 할 수 있다. 자기를 온전하게 사랑할 수 있는 사람이 다른 사람을 진정으로 사랑할 수 있다. 혼자서만 시간을 보낸다고 해서 이기적인 사람인 것도 아니다. 당신은 당신 자신에게 가장 열렬한 팬인 동시에 가장 강력하게 동기를 부여하는 멘토이기도 하다. 가장 중요한 사람인 자기 자신을 돌보고 자기가 온전하다는 사실을 느끼는 것은 매우 중요하다.<br>
+    위기가 닥쳤을 때 고독을 즐기는 것 이외에도 중요한 일은 긴장을 풀고 무엇이 문제인지 직시하는 것이다. 사업을 하다가 위기가 닥치면 누구나 본능적으로 싸우려 들거나 혹은 도망치려 들거나, 둘 중 하나다. 이런 모습은 자연에서 온 모든 동물의 행태와 별반 다르지 않다. 어떤 거래가 예상과 달리 잘못 돌아가면 우리는 곧바로 스스로 묻는다. “여기에 맞서 싸워야 하나, 아니면 도망쳐야 하나?”<br>
+    매출액이 감소하거나, 직원이 말썽을 부리거나, 경쟁 업체들이 시장을 슬그머니 잠식한다고 생각해보자. 또 세금 폭탄을 맞거나, 투자 자금 확보가 계획보다 저조하면, 해결책을 생각하기보다는 싸울지 아니면 도망칠지 둘 중 하나를 선택하는 데 초점을 맞추게 된다. 그게 편한 선택이기 때문이다.<br>
+    투쟁이냐 도피냐 양자택일이 필요한 순간에 혼자서 생각하는 시간을 갖기는 무척 어렵다. 나는 이런 상태로 오랜 세월을 보낸 경험이 있기에, 이런 상황을 미리 피하는 데는 선수이며 나름대로 요령도 있다. 바로 긴장을 푸는 것이다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 휴식은 새로운 에너지와 일할 동기를 주며, 인생 자체를 사랑하는 법을 가르쳐준다. 우리 인간의 정신은 자연과 연결될 필요가 있다. 오늘날에는 사람들이 자연과 단절되어 자기 정신의 한 부분을 잃어버린 채 살아간다. 하지만 우리는 자연에서 왔으며 자연의 한 부분임을 잊지 말아야 한다. 자연에 가만히 귀를 기울이면, 자연이 말을 걸어오는 것을 알 수 있다. 생각에 푹 빠지고 싶을 때면 나는 언제나 자연을 찾는다.<br>
+    일상 속에서 틈틈이 자기만의 시간을 가지는 것도 중요하다. 혼자 있다고 해서 외롭고 쓸쓸해야 한다는 뜻은 아니다. 세상에서 가장 중요한 존재인 자기 자신에게 집중해야 한다는 뜻이다. 사랑하는 사람을 자기 인생 안에 두는 것은 중요하지만, 그렇다고 해서 스스로 비참하다고 느끼면서까지 다른 사람을 자기보다 우선순위에 둬서는 절대로 안 된다. 그러니 날마다 온전하게 자기만의 시간을 가져보자. 명상하거나 산책하며 기분 전환을 하거나, 목표를 세우고 수정하는 데 이 시간을 써라. 날마다 일정하게 오롯이 자기를 위해서 시간을 써라. 마음을 평온하게 할 수도, 신체를 느긋하게 이완할 수도 있고, 다음에 성취하고 싶은 일에 집중할 수도 있다. 무엇을 하든 이 시간을 자기에게 유익한 것으로 만들어라. 불안이나 걱정이 당신에게 영향을 주도록 내버려둬서는 안 된다. 소진된 에너지가 재충전되고, 다음 단계로 나아갈 준비가 되어 있어야 한다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 목표에 집중하지 못하면, 위기가 인생에 그림자를 드리운다. 우리는 긴급한 문제를 처리할 때 자신의 내면을 살피기 전에 외부에 의지하곤 한다. 그러나 이는 스스로 불안이라는 짐을 보태는 일일 뿐이다. 실패할지도 모른다는 불안은 자기가 이루고자 하는 것과 멀어지게 만들며, 목표를 성취할 수 있다는 자신감을 망가뜨린다.<br>
+    이러한 불안을 다스리려면 바로 자신의 내면에 집중해야 한다. 나는 문명에서 멀리 벗어나 이메일을 확인할 수도 없고 전화도 할 수 없는 자연 그대로의 오지에 며칠씩 머물기를 좋아한다. 스스로 여러 날 자리를 비워도 세상은 아무런 문제 없이 잘 돌아간다는 사실을 깨닫는 것이 내면에 집중하는 첫 번째 단계다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 첫 번째로 “나는 온전하다”라는 문구를 살펴보자. 이 문구는 몸과 마음에 아무런 장애도 없는 온전한 사람이라는 사실에 진심으로 감사하며, 이런 상태가 앞으로도 계속 이어지길 바라기 때문에 선택했다. 신체적인 문제를 가진 사람들도 있고, 불안과 우울, 자신감 부족 등과 같은 정신적인 문제를 가진 사람들도 있다. 나에게도 우울증과 편집증, 불안에 시달리며 고통스러워하던 시절이 있었다. 그러나 지금은 괜찮다. 이런 점을 일부러 의식하고 고맙게 여기려고 한다. 또 스스로의 행동에 대해 불평하거나 변명할 권리가 없고, 도움이 필요한 사람이 있으면 도와야 한다는 사실을 당연하게 받아들인다.<br>
+    두 번째 문장은 “나는 건강하다”다. 이 문구는 몸이 아프면 어떤 것도 즐거울 수 없다는 뜻에서 아주 강력한 영향력을 지닌다. 운동과 균형 잡힌 식단은 내 생활에서 무엇보다도 중요하다. 건강에 초점을 맞추면 인생의 다른 여러 목표에 집중하기가 한결 쉬워진다는 사실을 직접 확인했기 때문이다.<br>
+    세 번째는 “나는 행복하다”다. 이 문장은 성공에 앞선 본질적인 선언이다. 행복하고 긍정적인 외양을 갖추려면 자기 마음을 거기에 맞게 설정해야 하기 때문이다. 그래야 삶 속에서 행동하고 누리는 모든 것을 즐길 수 있다. 행복한 상태에 초점을 맞추면 우리는 한층 더 생산적으로 바뀌며, 더 많이 감사할 줄 알게 되고, 새로운 여러 경험에 더 개방적으로 바뀐다.<br>
+    네 번째 문장은 “나는 부자다”다. 앞에서도 말했듯이, 자기가 원하는 것을 선언으로 마음속에서 먼저 만든 다음에야 비로소 실제 현실에서 이룰 수 있다. 자기 믿음의 한계를 미리 설정한다든가 자신을 의심한다든가 하는 일에서 벗어나서, ‘부자가 된다’는 개념을 먼저 마음으로 받아들일 필요가 있다. 잠재의식이 한 점의 의혹이나 제약 없이 진실이라고 받아들일 때까지 선언을 반복해야, 비로소 우리는 부자가 될 수 있다. 잘 생각해보라. 우리가 사는 세상에는 부가 넘쳐난다. 당장은 믿지 못하겠지만, 부를 받아들일 올바른 마음 상태를 가지기만 하면 누구든 부자가 될 수 있다.<br>
+    마지막 선언은 “나는 남을 잘 돕는다”다. 도움이 필요한 사람에게 아무런 대가도 바라지 않고 도움의 손길을 내미는 순간의 감정보다 더 위대한 느낌은 없다. 도움이 필요한 사람을 돕는 데는 큰 노력이 들지 않는다. 도움이 필요한 사람은 곳곳에 많다. 아주 조금만 수고를 들이면 금방 찾을 수 있다.<br>
+    이 다섯 가지 선언은 나에게 가장 중요하며 내가 인생을 살아가면서 계속 지켜나가고 싶은 덕목들이다. 묻고 싶다. 당신만의 다섯 가지 선언은 무엇인가?<br>
+    나는 다섯 가지 선언을 늘 되뇌고 실천하는 습관을 들였다. 이렇게 내 마음과 영혼과 믿음을 끊임없이 설계함으로써, 나 자신에게 동기를 부여해왔다. 물론 그동안 인생 여정의 오르막길도 걸었고 내리막길도 걸었으며, 때로는 몇 주씩 선언하기를 실천하지 않은 채 그냥 보내기도 했다. 하지만 그럴 때마다 초심을 잃지 않으려고 다시 예전 마음으로 돌아와 다섯 가지 선언을 되뇌고 실천하려 노력했다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 당신 마음은 대부분 시간 동안 사실상 잠재의식 상태에 있다. 잠재의식을 의식해보면 알겠지만, 사실 잠재의식은 매우 방어적이다. 당신이 자기 마음에 집중하고자 할 때 잠재의식은 24시간 체제의 보안 요원처럼 행동하면서 타당한 이유 없이는 어떤 것도 발을 들여놓지 못하게 한다.<br>
+    그러니 긍정 선언을 통해 잠재의식을 한껏 고양하는 일은 매우 중요하다. ‘나는 ~다’를 지속해서 하다 보면 잠재의식의 힘이 깨어난다. 또한, 나는 이 선언을 앞서 살펴본 바와 같이 다섯 가지로 제한함으로써 집중력을 극대화하고 의미 있는 결과를 더 빠르게, 더 많이 성취할 수 있음을 깨달았다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 나는 16년이 넘는 긴 세월 동안 온갖 책과 세미나를 통해 다양한 지식을 얻었다. 이 지식에 스스로 한 가지를 더 보탰는데, 그것은 바로 ‘나는 ~다’의 힘이다. 어떤 긍정적인 선언이든 ‘나는 ~다’를 추가하면 효과가 한층 커진다.<br>
+    지금도 우리 집 거실과 침실 벽에는 날마다 스스로 되뇌는 문구들이 붙어 있다. 낮 동안에 내 잠재의식은 벽에 붙은 문구들을 보고 또 보며 마음속 깊이 새긴다. 그중에서도 내가 가장 중요하게 생각하는 문구는 다음과 같다.<br>
+    “나는 온전하다.”<br>
+    “나는 건강하다.”<br>
+    “나는 행복하다.”<br>
+    “나는 부자다.”<br>
+    “나는 남을 잘 돕는다.”<br>
+    규모가 큰 프로젝트를 진행할 때면 이 다섯 문장을 하루에 100번 넘게 중얼거리기도 한다. 바보처럼 보일 수도, 시간 낭비처럼 보일 수도 있지만, 자기 마음을 통제할 수 있다면 자기 인생도 통제할 수 있음을 생각해보라.
+    <br><br>
+
+    <a></a>
+    [체인저블] 『시크릿』으로 변화를 얻고 나자, 더 많은 책이 읽고 싶어졌다. 일하지 않는 시간에는 마음이 발휘하는 힘을 주제로 다룬 여러 책을 읽었다. 커피 한 잔을 얻어 마시고, 점심 한 끼를 얻어먹고, 일자리까지 구하게 되자, 내가 내 인생을 통제할 수 있다는 확신이 들었다.<br>
+    변화의 스위치가 켜진 것은 그때부터였다. 내가 읽는 책들이 제시하는 여러 가르침을 내 삶에서 녹여내고자 노력하기 시작했다. 생각을 예전과 다르게 해서 마침내 내 인생을 스스로 통제할 수 있게 된 걸까, 아니면 그때까지는 다른 생각을 하지 않음으로써 내 인생에 대한 통제권을 스스로 포기하고 살았던 걸까?<br>
+    무엇이 맞는지는 중요하지 않다. 다르게 생각하기 시작했다는 단순한 행동이 중요할 뿐이다. 나는 날마다 삶에 대한 새로운 발견을 했다. 나폴레온 힐의 책을 읽고 자기 암시의 힘을 배운 뒤로는, 일상 속에서 긍정을 실천하기 시작했다. 토니 로빈스나 잭 캔필드 같은 사람들이 쓴 책에서는 성취하고자 하는 것이나 경험하고자 하는 것, 또 가지고자 하는 것을 명상하며 떠올리고 내 잠재의식을 전환하는 방법을 배웠다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 다음으로는 ‘마치 ~인 셈치고’의 원리를 이용해보자. 빅토리아 시대의 철학자 윌리엄 제임스가 정리한 감정과 행동에 대한 이론에 따르면, 우리 행동을 이끄는 것은 우리의 감정이 아니다. 즉 행복감을 느낀다고 해서 저절로 웃음이 나오지는 않는다는 것이다. 그는 반대로 우리 행동이 감정을 인도한다고 주장한다. 웃으면 행복감이 느껴진다는 것이다. 그래서 제임스는 이렇게 결론을 내렸다.
+    “어떤 물건을 가지고 싶다면 이미 그 물건을 가지고 있는 것처럼 행동하라.”
+    바로 이 조언을 일상의 모든 측면에 적용할 수 있다. 특정한 어떤 사람이 된 듯 행동함으로써 그 사람이 될 수 있다.<br>
+    책임감, 감사하는 마음, 인내심, 자신감 등 모든 긍정적인 감정을 연습하라. 이 연습을 거듭하면 같은 상황에서도 더욱 성장할 수 있고, 성장하면 보이는 것도 달라진다. 작은 성공을 쌓으며 점차 성공한 사람이 되어간다는 사실을 잊지 말고, 계속해서 시련을 긍정적으로 해석하기 위한 노력을 해보자. 감정도 연습하면서 더욱 단단하게 내 것으로 만들 수 있다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 책임감을 가지는 것 외에도 인내심을 키우는 일 역시 중요하다. 책임감과 비슷한 맥락으로, 인내심을 기르면 시련에 맞닥뜨렸을 때 그 시련을 다른 의미로 해석할 능력이 생기기 때문이다. 이를 미처 개발하지 못한 사람들은 극단적으로 힘든 환경에서 자신의 다른 모습을 상상하지 못한다. 특정 사건에 대해 자신이 드러내는 감정적인 반응을 통제하는 능력을 ‘근육’이라고 생각하면 이해하기 쉽다. 이두박근은 쓰면 쓸수록 강해진다. 감정을 통제하는 것도 마찬가지다. 그다지 심각하지도 않은 일들(식당에 갔는데 웨이터가 무례하다)이 자기 기분을 망치게 내버려두는 사람이라면, 상대적으로 심각한 일들(반갑지 않은 친척이 찾아와서 주말 내내 집에 머문다)이 일어날 때 어떻게 행복한 마음을 유지할 수 있겠는가?<br>
+    인내심을 키우는 데 결정적으로 중요한 요소는 어떤 방해물이 앞길을 막아서도 기꺼이 수용하는 마음가짐이다. 자기에게 닥친 결과를 온전하게 인정하지 않는다면 결과를 긍정적인 눈으로 바라보지 못할 테고, 따라서 결코 행복해질 수 없다. 그러니 자기 인생에서 펼쳐진 결과를 온전하게, 아무런 이의 없이 기꺼이 받아들이는 것부터 시작하라. 이런 태도를 가지면 넘어지더라도 다시 일어나 앞으로 나아갈 힘을 얻을 수 있다. 어떤 실패를 겪는다 해도 언제든 새롭게 시작할 수 있다는 자신감이 생기기 때문이다.
+    <br><br>
+
+    <a></a>
+    [체인저블] 우리에겐 수없이 많은 감정이 있다. 그중에서도 부를 가져다주는 감정은 따로 있다. 바로 책임감이다. 책임감을 가지면 당혹스러움을 겪을 일이 많아지고, 겸손의 의무를 져야 하며 많은 돈을 써야 할 수도 있다. 그러나 자기 선택에 책임을 진다는 생각이 확고하면, 부를 끌어당기는 강력한 힘이 생긴다.<br>
+    책임을 진다는 것은 다시 말해 자기 불행을 남 탓으로 돌리지 않는다는 뜻이다. 다른 사람들이 ‘나’에게 부정적으로 작용할 수밖에 없는 행동을 하거나 외부 환경이 불리하더라도, ‘나’는 행복할 수 있는 길을 찾아낸다는 뜻이기도 하다.
+    <br><br>
 
     <a></a>
     [오래된 연장통 219p] 인지심리학자 파스칼 보이어(Pascal Boyer)에 따르면, 사람들은 아주 약간만 낯설고 이상한 것에 가장 관심이 가고 더 잘 기억한다. 반면에 시시하도록 정상적인 것이나 현실과 너무 동떨어져 이해하기 어려울 만큼 이상한 것은 제대로 기억하거나 전파하지 못한다.
