--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -66,6 +66,14 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=sqhOlNCn1b4" target="_blank" title="띵언 저장소">
+    억만장자가 말하는 스티브 잡스, 일론 머스크, 워렌 버핏의 공통점</a><br>
+
+  <a href="https://www.youtube.com/watch?v=IEK5SPCai4A" target="_blank" title="그릿 영어TV">
+    ★MIT 대학생 질문 받고 20초 동안 침묵한 스티브잡스★ (한영 자막)</a><br>
+
   <a href="https://www.youtube.com/watch?v=TlOpvJjgw1k" target="_blank" title="5분 뚝딱 철학">
     논리적 오류</a><br>
 
