--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -58,7 +58,10 @@
 
 
 
-
+  <a></a>
+  [군주론]-니콜로 마키아벨리<br>
+  모든 행위의 과정에는 위험이 도사리고 있다. 그러므로 신중하다는 것은 위험을 피하는 데 있는 게 아니라, 위험도를 판단하여 결단력 있게 행동하는 데 있다.
+  <br><br>
 
   <a href="https://www.youtube.com/watch?v=q4Urs9b2RbY" title="인문채널휴 HUE">
     [임용한의 전쟁사] 한국사 최고의 전술과 전투(6): 관음포 해전</a><br>
