--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -61,15 +61,18 @@
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
-  <img src="Character_GS.png" width="15%" title="GS">
-  <img src="Character_이올린.png" width="15%" title="이올린">
-  <img src="Character_라시드.png" width="15%" title="라시드">
-  <img src="Character_크로우.png" width="15%" title="크로우">
-  <img src="Character_칼스.png" width="15%" title="칼스">
-  <img src="Character_베라딘.png" width="15%" title="베라딘">
-  <img src="Character_이루스.png" width="15%" title="이루스">
-  <img src="Character_디아블로.png" width="15%" title="디아블로">
-  <img src="Character_쿤.png" width="15%" title="쿤">
+  <div class="buttons">
+      <button class="pulse3"><img src="Character_GS.png" width="100%" title="그레이 스케빈져"><b>GS</b></button>
+      <button class="pulse3"><img src="Character_이올린.png" width="100%" title="이올린 팬드래건"><b>이올린<br>팬드래건</b></button>
+      <button class="pulse3"><img src="Character_라시드.png" width="100%" title="라시드 팬드래건"><b>라시드<br>팬드래건</b></button>
+      <button class="pulse3"><img src="Character_크로우.png" width="100%" title="살라딘"><b>크로우</b></button>
+      <button class="pulse3"><img src="Character_칼스.png" width="100%" title="칼스"><b>칼스</b></button>
+      <button class="pulse3"><img src="Character_베라딘.png" width="100%" title="베라딘"><b>베라딘</b></button>
+      <button class="pulse3"><img src="Character_이루스.png" width="100%" title="이루스"><b>이루스</b></button>
+      <button class="pulse3"><img src="Character_디아블로.png" width="100%" title="디아블로"><b>디아블로</b></button>
+      <button class="pulse3"><img src="Character_쿤.png" width="100%" title="쿤"><b>쿤</b></button>
+  </div>
+
 
 
 
