--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,14 +57,19 @@
 
 
 
-  <h1>The War of Genesis III[Lv.42]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.53]</h1><br><br><br>
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
-  <img src="Character_살라딘.png" width="15%" title="살라딘">
-  <img src="Character_크리스티앙.png" width="15%" title="크리스티앙 데 메디치">
-  <img src="Character_죠안.png" width="15%" title="죠안 카트라이트">
-  <img src="Character_얀.png" width="15%" title="얀 지슈카">
+  <div class="buttons">
+      <button class="pulse3"><img src="Character_살라딘.png" width="100%" title="살라딘"><b>살라딘</b></button>
+      <button class="pulse3"><img src="Character_크리스티앙.png" width="100%" title="크리스티앙 데 메디치"><b>크리스티앙<br>데 메디치</b></button>
+      <button class="pulse3"><img src="Character_죠안.png" width="100%" title="죠안 카트라이트"><b>죠안<br>카트라이트</b></button>
+      <button class="pulse3"><img src="Character_얀.png" width="100%" title="얀 지슈카"><b>얀<br>지슈카</b></button>
+      <button class="pulse3"><img src="Character_철가면.png" width="100%" title="철가면(클라우제비츠 팬드래건/샤른호스트)"><b>철가면<br>(샤른호스트)</b></button>
+  </div>
+
+
 
   <br><br><br><br><br>
 
@@ -77,6 +82,32 @@
 
 
 
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(021421): 7(+14EXP)<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(021321): 24(+48EXP)<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(020821): 1(+2EXP)<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(020721): 5(+10EXP)<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(020621): 6(+12EXP)<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(020321): 3(+6EXP)<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(020121): 5(+10EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 4-1<br>
