--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.111]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.112]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -145,7 +145,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.9]</h2></strong>
+    <h2><strong>심리학[Lv.10]</h2></strong>
+      [프레임]-최인철<br>
       [오래된 연장통]-전중환<br>
       [클루지]-개리 마커스<br>
       [뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤<br>
@@ -189,7 +190,7 @@
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
     <h2><strong>자기계발[Lv.8]</h2></strong>
       [나는 4시간만 일한다]-팀 페리스<br>
-      [체인저블]-안드레스 피라<br>
+      2X[체인저블]-안드레스 피라<br>
       <b>4X[메타인지, 생각의 기술]-오봉근</b><br>
       [정리하는 뇌]-대니얼 J. 레비틴<br>
       [커피 한 잔의 명상으로 10억을 번 사람들]-오시마 준이치<br>
@@ -217,9 +218,16 @@
 
 
 
+
+    <p><pre>
+      <h2>2021년 1월 독서</h2>
+        <li>심리:[프레임]-최인철</li>
+    </p></pre>
+
     <p><pre>
       <h2>2021년 1월 독서</h2>
         <li>자기계발:[나는 4시간만 일한다]-팀 페리스</li>
+        <li>자기계발:[체인저블]-안드레스 피라</li>
         <li>소설:[부자의 그릇]-이즈미 마사토</li>
         <li>심리:[오래된 연장통]-전중환</li>
         <li>경제:[데이터 읽기의 기술]-차현나</li>
