--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.45]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.50]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -58,6 +58,8 @@
        <button class="pulse1"><img src="Spell_Frostnova.png" width="100%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source."><b>Frost Nova</b></button>
 
        <button class="pulse3"><img src="Spell_Blink.png" width="100%" title="Blink is a level 4 mage spell that teleports the caster forward 20 yards (if possible) and frees the caster from stuns and roots. During the Burning Legion's third invasion of Azeroth, one large blink spell was used by the Council of Six to teleport Dalaran from above Karazhan to the Broken Isles. According to Emissary Auldbridge, the intensity of the spell can be disorienting and cause a loss of consciousness for a time. Some even wake up to find themselves stuck in walls."><b>Blink</b></button>
+
+       <button class="pulse3"><img src="Spell_Conjure_Refreshment.png" width="100%" title="Conjure Refreshment is a level 5 mage spell that provides the caster with health- and mana-replenishing food. Casting it places into the mage's inventory a stack of 20 refreshments of an appropriate level."><b>Conjure<br>Refreshment</b></button>
     </div>
 
 
@@ -74,6 +76,273 @@
 
 
 
+    <a></a>
+    [스틸니스 284p] 일, 관계 우리 자신을 위해 쓸 수 있는 에너지는 한정되어 있다. 지혜로운 사람은 이 사실을 받아들이고 주어진 에너지를 신중히 활용한다. 잠을 자야만 최고의 정신 상태를 유지할 수 있기 때문에 위대한 사람들은 잠을 소중히 여긴다. 그들은 '노'라고 말한다. 한계에 부딪히면 잠자리에 든다. 수면 부족이 판단력을 훼손하는 일을 허락하지 않는다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 277p] 중용을 지켜라. 현재에 집중하라. 자신의 한계를 알라. 이게 열쇠다. 우리 각자에게 주어진 몸은 선물이다. 몸이 쓰러져 죽도록 일하지 마라. 불태우지 마라. 당신이 받은 선물을 보호하라.
+    <br><br>
+
+    <a></a>
+    [스틸니스 248p] 머릿속은 비어 있지만 몸은 반복되는 일상 속에 있을 때 우리는 최고의 능률을 발휘할 수 있다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 247p] 뛰어난 사람들은 완전한 자유가 곧 악몽이라는 사실을 알고 있다. 그들은 탁월해지려면 반드시 질서가 필요하다는 사실과 예측할 수 없는 세상을 사는 우리에게 좋은 습관이야말로 확실하고 안전한 천국이라는 사실을 누구보다 잘 알고 있다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 236p] 우리가 어떤 일에 "아니오"라고 말해야 할지 알게 된다면 정말 중요한 문제에 "네"라고 대답할 수 있게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 235-236p] 모든 상황에서 이렇게 물어라.<br>
+    * 그게 무엇인가?<br>
+    * 그게 왜 중요한가?<br>
+    * 내게 필요한 것인가?<br>
+    * 내가 바라는 것인가?<br>
+    * 기회비용은 무엇인가?<br>
+    * 먼 훗날 이때를 돌아봤을 때 과연 잘 한 일이라고 생각할까?<br>
+    * 이 일을 내가 아예 몰랐더라면, 이 요청 메일이 누락됐다거나 그들이 나를 지명해서 요청하지 않았더라면 내가 이 일을 놓쳤다는 걸 누가 알아차리기나 할 수 있을까?
+    <br><br>
+
+    <a></a>
+    [스틸니스 235p] 조종사라면 상황을 빠져나갈 구실로 "미안합니다. 대기 중이라서요"라고 말할 것이다. 의사나 소방관, 경찰관이라면 "당직 중"이라는 말을 방패막이로 쓸 수 있다. 그렇다면 우리는 우리 인생이라는 업무에 당직을 서고 있는 중이 아닌가? 우리가 최대한의 능력을 발휘하여 지키려는 무엇인가가 또는 누군가가 있지 않은가? 우리의 몸은 가족이나 자기계발, 우리 자신의 일을 위해 항상 당직 중이 아닌가?<br>
+    그들이 정말로 당신에게 내어달라고 하는 게 무엇인지 항상 생각해야 한다. 왜냐하면 대부분은 당신 인생의 일부를 요구하고 있을 것이고, 당신은 원하지도 않는 것과 당신의 인생을 맞바꾸려고 하고 있을 것이기 때문이다. 시간이 그렇다는 사실을 명심해야 한다. 시간은 다시는 돌이킬 수 없는 당신의 인생이자 당신의 살이고, 피다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 233p] 단 며칠 동안이라도 무엇인가를 하지 않았다는 이유로 스스로를 무가치한 사람이라고 생각하는 사람은 자기 손으로 고요를 박탈하는 것과 같다. 그렇다. 그뿐만 아니라 한층 높은 수준의 역량을 얻을 수 있는 길을 스스로 차단하고 있는 것이기도 하다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 215p] 처칠이 기력을 보존했던 건 일을 회피하거나 도전에서 물러서지 않기 위해서였다. 그리하여 그는 모든 일을 추진력 있게 해내면서도 결코 기력을 모두 소진해버리는 일이 없었고, 삶을 가치 있게 만드는 기쁨의 불꽃을 꺼뜨리는 일도 없었다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 199p] 고요에 도달할 수 있느냐의 문제는 우리가 여유를 가질 수 있는지, 분노하지 않기를 선택할 수 있는지, 분노가 아닌 다른 감정을 연료로 사용할 수 있는지의 여부에 달려있다. 우리는 진정한 발전과 승리를 도와주는 연료, 타인과 우리의 대의명분, 평화를 얻으려는 기회에 해를 끼치지 않는 연료를 사용해야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 198p] 불교도들은 분노가 우리 내면에 존재하는 호랑이와 같다고, 그 호랑이가 발톱을 세우면 그를 감싸고 있는 우리의 몸통을 찢는다고 믿었다. 고요, 그리고 이를 정의할 수 있는 명료한 사고와 넓은 시야를 가지려면 호랑이가 우리를 죽이기 전에 우리가 먼저 그 호랑이를 길들여야 한다. 욕망은 주의하면 되지만 분노는 제압해야 한다. 분노는 우리 자신뿐만 아니라 다른 많은 사람들에게도 상처를 주기 때문이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 196p] 분노보다 더 사람을 멍청하게 만드는 것은 없다. 분노만큼 모든 것을 왜곡하게 만드는 것은 없다. 분노가 성공한다면 그보다 오만한 게 없고 실패하면 그만큼 광기 어린 게 없다. 분노는 행운의 여신이 적을 물리쳐줄 때에도 스스로를 향해 이빨을 드러내며 패배하더라도 지쳐 물러서는 법이 없기 때문이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 195p] "항상 잘 기억해두게. 남들이 나를 미워할 수는 있지만 내가 같이 미워하지 않는 한 그런 사람들은 나를 이길 수 없네. 내가 같이 미워하면 그건 나 자신을 망치게 된다네." - 리처드 닉슨
+    <br><br>
+
+    <a></a>
+    [스틸니스 185p] 좋은 관계를 맺으려면 우리는 도덕적이고 충실하고 현재에 집중하며 공감하고 관대하고 개방적이 되겠다는, 더 큰 전체의 일부가 되겠다는 의지를 가져야 한다. 좋은 관계를 맺으려면, 그로 인해 성장할 수 있으려면 진정한 의미의 항복을 해야 한다. 물론 결코 쉬운 일은 아니지만 이 어려운 도전에서 능력을 발휘한다면 혹은 그러려고 노력만 하더라도 우리는 완전히 달라질 수 있다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 185p] 나쁜 관계는 널렸고 좋은 관계는 드물다. 이것이 놀랄 일인가? 타인과 가까워지고 서로 이어진다는 건 우리 영혼의 모든 면을 시험하는 일이다. 특히 우리 안에 있는 내면아이가 활동할 때는 더욱 그렇다. 잘못된 욕망에 끌려 다닐 때나 우리의 이기심이 타인을 위한 자리를 내어주지 않을 때에도 마찬가지다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 175p] 중독은 의심할 여지없는 생물학적 질환이지만 조금 더 실제적인 의미로 보면 스스로의 충동을 우선하는 자아에 집착하는 과정이기도 하다. 그러므로 우리보다 더 큰 존재가 있다는 믿음이 중요한 돌파구가 될 수 있다. 그런 믿음을 갖는다는 것은 중독자들이 자기가 전지전능한 신이 아니며 자기에게는 무엇이든 할 수 있는 ㅎ미이 없다는 사실을, 실제로 그랬던 적이 단 한 번도 없었다는 사실을 마침내 받아들인다는 의미다. 그런 힘을 가진 자는 실제로 아무도 없다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 172p] 당신을 삶의 아름다움으로부터 벗어나게 하는 일을 허락하지 마라. 세상을 신성한 곳으로 여기고 모든 경험을 성스럽게 해보라. 무엇이든 이런 것들이 존재한다는 사실에, 당신이 존재한다는 사실에 경탄하라. 무의미한 싸움에 서로를 괴롭히고 있다고 할지라도, 무의미한 일로 우리 자신을 죽이고 있다고 할지라도 우리는 언제나 이 모든 일을 멈추고 주변에 수없이 존재하는 아름다움에 몸을 담글 수 있다. 그 아름다움 속에서 마음을 가라앉히고, 그 아름다움 속에서 깨끗해져보라.
+    <br><br>
+
+    <a></a>
+    [스틸니스 113p] 찰나의 고요는 우리가 추구해야 할 목표가 아니다. 우리가 추구해야 할 것은 가장 힘든 상황에서조차 일관성 있게 끌어낼 수 있는 집중과 지혜다. 그런 경지에 이르려면 반드시 더 많은 노력이 필요하다. 자기반성의 노력은 물론이고 증상이 아닌 질병을 치료하려는 노력도 동반되어야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 111p] 고요가 있어야만 우리를 괴롭히는 골치 아픈 문제들을 해결할 수 있다. 목표를 줄여야먄 험난한 목적지에 도달할 수 있다. 고집스러운 의지를 붙잡기보다 내려놓아야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 110p] 숙달의 경지에 가까이 갈수록 세부적인 결과에는 덜 신경 쓰게 된다. 더욱 협력적이고 창의적인 사람이 될수록 에고와 불안이 줄어들고 내면이 평화로우면 평화로울수록 더욱 생산적인 사람이 될 것이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 110p] 우리가 추구해야 할 균형점도 이와 같다. 인정이나 부, 권력을 추구하다보면 표적을 놓친다. 표적을 너무 열심히 겨냥하면 겐조가 제자들에게 경고한 것처럼 거기까지 이르는 과정과 명중에 필요한 기술을 간과하게 될 것이다. 우리가 하고 있어야 하는 일은 연습이고, 우리가 밀어내야 할 것은 고집스러운 의지다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 109p] 궁도, 요가, 화학, 그 어느 분야든지 간에 대부분의 학생은 굳은 의지를 품고 그 분야에 뛰어든다. 결과에 집중하는 것이다. 그들은 최고 등급이나 최고 점수를 받고 싶어 하고 그렇기 때문에 미리 '전문 지식'을 익히고 들어간다. 불필요한 단계를 건너뛰고 곧장 가장 중요한 단계로 가고 싶어 한다. 그 결과 다른 사람들을 가르쳐주는데 어려움을 겪고, 생각했던 것보다 여정이 힘들어지면 쉽게 낙담한다. 현재에 집중하지 않기 때문이다. 열린 마음으로 경험하려고 하지 않기 때문에 배우지 못한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 109p] 역설적으로 보일지도 모르지만 정신의 영역을 정복하려면 우리는 '정복'이라는 단어가 주는 경직성에서 한 발씩 물러나야 한다. 하나하나의 단계에 집중한다면, 그 과정을 온전히 받아들인다면, 그리고 쫓아가기를 포기한다면 우리에게 필요한 고요를 얻게 될 것이다. 너무 열심히 생각하지 않는다면 우리는 더 잘 생각할 수 있다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 105p] 이것이 열쇠다. 자기중심적이고 불아한 사람들은 자신의 결점을 숨기거나 곱씹거나 끙끙 앓거나 겉으로 드러내면서 그것을 정체성의 중심에 둔다. 이런 사람들은 고요할 수 없다. 고요는 오직 강인함 속에 뿌리를 내린다.<br>
+    바로 여기에 초점을 맞춰야 한다.<br>
+    불안에 먹이를 주지 마라. 과대망상에 먹이를 주지 마라.<br>
+    이 둘 모두 고요를 가로막는 방해물이다.<br>
+    자신감을 찾아야 한다. 당신은 이미 자신감을 가지고 있다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 104p] 인생을 살다 보면 시련에 맞닥뜨리기도 할 것이다. 심지어 거장이나 천재들도 새로운 기술을 배우거나 새로운 영역을 개척하려고 할 때 스스로 부족하다고 느끼는 순간과 마주한다. 이러한 시기를 괴로움의 원천으로 여길지 즐거운 도전으로 여길지 결정하는 것이 바로 자신감이다. 일이 뜻대로 흘러가지 않을 때마다 비참한 마음이 든다면, 또는 일이 뜻대로 흘러갈 때에도 불안과 의심으로 스스로의 성과를 깎아내리면서 그 시간을 즐기지 못한다면 인생은 지옥이 되지 않겠는가?<br>
+    물론 완전한 자신감이나 마르지 않는 자신감 같은 건 존재하지 않는다. 우리는 흔들릴 수밖에 없고 의심할 수밖에 없다. 완전히 불확실한 낯선 상황에 놓이기도 할 것이다. 그렇다고 하더라도 그 혼란한 내면을 차분히 들여다보며 자신감을 찾아내야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 103p] 자신감 있는 사람은 중요한 게 무엇인지 잘 알고 있다. 타인의 의견을 무시해야 할 때를 안다. 앞서나가기 위해 허풍을 떨거나 거짓말하지 않는다. 당연히 자신의 허풍과 거짓말을 따락지 못해 허덕이는 일 또한 없다. 자신감이란 스스로를 증명해야 할 필요에서 벗어나 우리의 기준을 우리 스스로 정할 수 있게 만들어주는 자유다. 자신감 있는 사람은 타인과의 견해 차이를 두려워하지 않으며 열등감 때문에 올바른 의견을 그릇된 의견으로 바꾸지도 않는다.<br>
+    그에 반해 에고는 의심에 흔들리고 오만에 시달리며 자기 자랑과 가식을 숨기지 못한다. 그렇다고 자신의 내면을 들여다보거ㅓ나 속내를 있는 그대로 드러내지도 않는다. 그 속에 어떤 추한 것이 들어있는지 너무나 잘 알고 있기 때문이다. 자신감 있는 사람들은 늘 열린 마음으로 자기반성을 하기 때문에 아무것도 숨기지 않은 있는 그대로의 내면을 들여다볼 수 있다. 이처럼 불필요한 갈등과 불확실함, 분노를 제거하는 행동이 비로소 고요를 얻을 수 있는 여유를 만들어낸다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 101p] 에고와 가면증후군이라는 극단보다 더 좋은 것, 오로지 자신감만 품고 있는 것은 무엇일까? 답은 노력, 이성, 객관성, 그리고 고요다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 91p] 우리 모두는 각자의 삶 속에 이러한 순간을 만들어야 한다. 정보를 제한하고 소리를 작게 줄여야 우리 삶에 일어나고 있는 일을 더욱 깊이 알 수 있다. 짧은 시간이라도 입을 다물고 있으면 마침내 이 세상이 우리에게 하려고 했던 말을, 또는 우리가 스스로에게 하고 싶었던 말을 들을 수 있게 된다.<br>
+    침묵이 이토록 드물다는 건 그만큼 가치 있다는 신호다. 침묵은 우리에게 아주 많은 것을 가르쳐줄 수 있다. 우리는 이런 고요함을 두려워 할 게 아니라 이를 붙잡아야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 77p] 우리가 느끼는 괴로움의 대부분은 심사숙고에서 나온 행동이 아니라 본능적으로 반응한 행동에서 비롯된다. 우리가 잘못하는 대부분의 행동들도 그렇다. 우리는 실제가 아닌 그림자에 반응하고 시험해보기 전부터 확신을 갖는다. 안경을 스고 제대로 볼 수 있도록 걸음을 멈추는 법이 없다.<br>
+    그렇다면 머릿속을 비운 다음 무엇을 해야 하는가? 바로 여유를 갖고 생각하는 것인데, 정말 제대로 생각하려면 규칙적으로<br>
+    * 당신에게 무엇이 중요한지 생각해보라.<br>
+    * 정말로 지금 어떤 일이 일어나고 있는지 생각해보라.<br>
+    * 눈에 보이는 그 이면에 무엇이 숨어 있을지 생각해보라.<br>
+    * 장기판의 큰 그림이 어떨지 생각해보라.<br>
+    * 진정한 삶의 의미가 무엇일지 생각해보라.
+    <br><br>
+
+    <a></a>
+    [스틸니스 75p] 우리는 의도적이고 신중하게 생각하는 법을 더욱 잘 익혀야 한다. 큰 문제에 맞닥뜨렸을 때, 복잡한 문제를 풀어야 할 때, 어떤 사람이나 상황 또는 삶이 어떻게 흘러가고 있는지 이해하려고 할 때에도. 99퍼센트의 인구가 하지 않는 생각을 해야 하며 그들이 99퍼센트의 시간 동안 하고 있는 파괴적인 생각을 우선 멈춰야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 71p] 당신의 양쪽 귀 사이에 있는 공간은 오로지 당신 자신의 것이다. 그곳에 들어오는 것만 통제할 게 아니라 그 안에서 일어나는 일 또한 통제해야 한다. 당신 자신과 자신의 생각에 영향을 받지 않도록 주의해야 한다. 강한 힘이 아니라 부드러운 힘으로 집요하게 쓸어내야 한다. 도서관에서 소란스럽게 떠드는 아이들에게 "쉿!"이라고 말하고, 전화기를 꺼내 드는 얼간이에게 밖으로 나가서 받으라고 경고하는 사서가 되어보라.<br>
+    머릿속은 중요하고 신성한 장소이기 때문이다.<br>
+    우리는 머릿속을 맑고 깨끗하게 유지해야 한다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 71p] 어떤 상황에 처하든 무엇을 하고 있든지 간에 스스로를 무너뜨리지 않는 것이 가장 중요하다. 지나친 생각으로 불필요한 의심으로 또는 앞선 추측으로 상황을 더 힘들게 만들어서는 안 된다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 62p] 온갖 소음, 온갖 정보, 온갖 데이터.<br>
+    우리는 침묵을 두려워한다. 남들 눈에 멍청하게 비칠까 봐 두려워하고 무엇인가를 놓칠까 봐 두려워한다. 우리는 "아뇨. 관심 없습니다"라고 말할 줄 아는 나쁜 사람이 되길 두려워한다.<br>
+    우리는 우리 자신을 우선으로 하기보다는, 그리고 자기 자신이 되기보다는 스스로를 비참하게 만드는 편을 택하고 있다.<br>
+    고요하게 있기보다, 불필요한 정보를 멀리 하기보다는.
+    <br><br>
+
+    <a></a>
+    [스틸니스 59p] 마르쿠스 아우렐리우스는 [명상록]에서 이렇게 말했다. "매 순간 자신에게 물어라. '이 일이 정말로 필요한가?'"<br>
+    무엇을 생각하지 말아야 하는지, 무엇을 무시하고 무엇을 무시하면 안 되는지 아는 것, 이게 바로 당신이 가장 먼저 해야 할 일이자 가장 중요한 일이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 56p] 정말 중요한 일이라면 당신이 알게 되는 순간까지도 여전히 중요할 것이다. 그렇게까지 중요하지 않은 일이라면 당신에게 닿기 전에 사라지거나 대수롭지 않은 일이었다는 사실이 명확해질 것이다. 그러면 불필요한 조급함이나 피로에 찌들 일 없이 내적으로 고요를 유지하며 관심이 필요한 사안에 온전히 주의를 기울일 수 있게 된다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 51p] 지금 이 순간이 문자 그대로 1,2초의 시간을 의미하는 것은 아니다. 진정한 의미의 '지금'이란 과거에 집착하거나 미래를 염려하지 않고 우리가 존재하기로 선택한 순간을 뜻한다. 우리는 과거에 일어난 일 또는 언젠가 일어날지도 모를 일에 대한 희망이나 걱정을 우리가 원하는 만큼 멀리 밀어낼 수 있다. 그러므로 지금 이 순간은 몇 분이 될 수도 있고 오전 몇 시간이 될 수도 있고 몇 년이 될 수도 있다. 당신이 그만큼 버틸 수만 있다면 말이다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 36p] 가능하면 힘을 내라. 어떤 상황이든 침착하라. 무한한 인내심을 가져라. 상대를 절대 궁지에 몰아넣지 말고 항상 그가 체면을 살릴 수 있도록 조력하라. 상대의 눈으로 상황을 바라볼 수 있도록 그의 입장에 서서 생각하라. 독선에 빠지지 않도록 죽을힘을 다해 조심하라. 독선만큼 스스로를 망치는 건 없다.
+    <br><br>
+
+    <a></a>
+    [스틸니스 24p] 고요는,<br><br>
+    명료하게 사고하는,<br>
+    장기판의 전체적 국면을 파악하는,<br>
+    어려운 결정을 내리는,<br>
+    우리의 감정을 다스리는,<br>
+    올바른 목표를 식별하는,<br>
+    압박감이 심한 상황을 대처하는,<br>
+    관계를 유지하는,<br>
+    좋은 습관을 만드는,<br>
+    유능한 사람이 되는,<br>
+    탁월한 신체 능력을 갖는,<br>
+    기쁨과 웃음이 넘치는 순간을 붙잡는<br><br>
+    열쇠다.
+    <br><br>
+
+    <a></a>
+    [프레임 293-294p] [지혜로운 사람의 11가지 프레임] 11. 인생의 부사를 최소화하라<br>
+    부사를 남발하는 심리적 이유에 대하여 작가들은 한결같이 자신감의 부족을 지적한다. 불안하면 사람들은 수식어를 많이 쓴다. 생명력이 넘치는 문장을 쓰기 위해서는 불필요한 부사를 줄이고 자신의 의사를 단순하고 명료하게 전달해야 한다.<br>
+    생명력이 넘치는 삶을 위해서도 마찬가지다. 인생의 부사를 줄여야 한다. 불안하기 때문에 자신의 삶에 주렁주렁 매달아놓은 액세서리들을 줄여야 한다. 자신의 문장에서 불필요한 수식어들을 줄여가는 과정과 자신의 삶에서 불필요한 장식물들을 줄여가는 과정은 본질적으로 동일하다. 둘 다 생명을 불어넣는 일이고, 자신감을 회복하는 일이다. 매일 아침 거울 앞에 서서 내 삶에서 줄여야 할 인생의 부사들을 점검해볼 필요가 있다. 행복에 관한 연구들이 지적하는 대표적인 인생의 부사를 꼽아본다면, '소유물'과 '타인의 시선'이다. 적정선을 넘게 되면 득보다는 독이 될 수 있는 것들이다.
+    <br><br>
+
+    <a></a>
+    [프레임 290-292p] [지혜로운 사람의 11가지 프레임] 10. 위대한 반복 프레임을 연마하라<br>
+    결국 글래드웰을 비롯하여 여러 심리학자들의 연구에 따르면, 성인기의 성취라는 것은 그것이 어떤 영역이든 '중단 없는 노력'에 의해 이루어진다는 것을 알 수 있다.
+    <br><br>
+
+    <a></a>
+    [프레임 287-288p] [지혜로운 사람의 11가지 프레임] 9. '누구와'의 프레임을 가져라<br>
+    많은 심리학 연구들은 행복은 '어디서'의 문제가 아니라 '누구와'의 문제임을 분명하게 밝혀주고 있다. 탁월한 성취를 이룬 사람들, 커다란 역경을 이겨낸 사람들, 자기 삶에 만족을 누리는 사람들, 이들에게는 거의 예외 없이 '누군가'가 있었다.
+    <br><br>
+
+    <a></a>
+    [프레임 286p] [지혜로운 사람의 11가지 프레임] 8. 소유보다는 경험의 프레임을 가져라<br>
+    행복은 소유 자체를 위한 소비보다는 경험을 위한 소비를 했을 때 더 크게 다가온다. (중략) 특히 나를 위한 것보다는 다른 사람을 위해 소비하는 것이 행복을 배가시킨다는 점을 기억하라.
+    <br><br>
+
+    <a></a>
+    [프레임 284-285p] [지혜로운 사람의 11가지 프레임] 7. 주변의 물건들을 바꿔라<br>
+    본받고 싶은 인물의 사진을 걸어놓거나 가지고 다니는 것도 한 방법이다. 자신이 닮고 싶은 롤 모델의 사진을 걸어놓는 행위가 그 사람처럼 생각하고 행동하도록 만드는 프레임을 유발할 수 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [프레임 282-284p] [지혜로운 사람의 11가지 프레임] 6. 닮고 싶은 사람을 찾아라<br>
+    '영웅'에 대한 이야기 역시 어느 사회에나 존재한다. 그 영웅 이야기를 바탕으로 미래의 영웅들을 만들어내기 위해서다. 부모가 아이들에게, 사회나 조직이 구성원들에게 특정한 이야기를 들려줌으로써 그들의 삶을 바꾸려고 하듯이, 우리 스스로에게도 어떤 이야기들을 들려줘야 한다. 내 가슴을 벅차게 만들고 두 주먹을 불끈 쥐게 만들었던 감동적인 이야기가 있다면 하나쯤 기억해두는 것이 좋다.
+    <br><br>
+
+    <a></a>
+    [프레임 280p] [지혜로운 사람의 11가지 프레임] 5. 긍정의 언어로 말하라<br>
+    한 사람의 언어는 그 사람의 프레임을 결정한다. 따라서 프레임을 바꾸기 위해서 꼭 필요한 일은 언어를 바꿔나가는 것이다. 특히 긍정적인 언어로 말하는 것이 반드시 필요하다.
+    <br><br>
+
+    <a></a>
+    [프레임 279-280p] [지혜로운 사람의 11가지 프레임] 4. 비교 프레임을 버려라<br>
+    과거의 자신보다 현재의 자신이 얼마나 나아지고 있는지, 자신이 꿈꾸고 있는 미래의 모습에 얼마나 근접해 있는지를 확인하는 시간상의 비교가, 남들과 비교하는 것보다 훨씬 더 생산적이라는 결론이다.
+    <br><br>
+
+    <a></a>
+    [프레임 277-278p] [지혜로운 사람의 11가지 프레임] 3. '지금 여기' 프레임을 가져라<br>
+    사람들은 현재를 '준비기'라고 프레임하는 경향이 있다. 현재는 더 나은 미래를 위해 준비하고 일방적으로 희생해야 하는 시간이라고 생각한다. (중략) 행복으로 가는 길은 지금 순간을 충분히 즐기고 감사하는 것으로부터 비롯된다.
+    <br><br>
+
+    <a></a>
+    [프레임 276-277p] [지혜로운 사람의 11가지 프레임] 2. 접근 프레임을 견지하라<br>
+    자기 방어에 집착하지 말고 자기 밖의 세상을 향해 접근하라. 다른 사람들에게 다가갈 때, 새로운 일을 접했을 때 늘 접근의 프레임을 견지하라. 그것이 두려울 땐 기억하라. 접근함으로 인한 후회는 시간이 지나면 사라지지만 안주함으로 인한 후회는 시간이 지날수록 더 커진다는 것을!
+    <br><br>
+
+    <a></a>
+    [프레임 274-275p] [지혜로운 사람의 11가지 프레임] 1. 의미 중심의 프레임을 가져라<br>
+    정말로 지혜로운 사람이 되기 위해서는 가까운 미래나 현재의 일도 늘 상위 수준으로 프레임해야 한다. 일상적인 행위 하나하나를 마치 그것을 먼 미래에 하게 될 일이라고 생각하면서 의미 중심으로 프레임하는 습관을 길러야 한다.
+    <br><br>
+
+    <a></a>
+    [프레임 261p] 우리가 무언가를 계속 유지하려 할 때 그 결정은 객관적으로 최선의 것이어서가 아니라 단순히 '현재 상태'였기 때문일 수 있음을 의미한다.
+    <br><br>
+
+    <a></a>
+    [프레임 250p] 어떤 프레임으로 제시되더라도 똑같은 결정을 내릴 수 있는 능력, 바로 그 능력이 경제적 지혜의 핵심이다. 자신의 선택이 잘못된 것 같을 때 자신의 성격을 탓하기보다는 그 선택이 어떻게 프레임되어 있는지부터 살펴보는 지혜가 필요하다.
+    <br><br>
+
+    <a></a>
+    [프레임 211p] 미래를 예측할 때 현재 존재하는 자기 내면의 의지만 보는 우를 범하지 않으려면, 현재에는 존재하지 않지만 미래에는 존재하게 될 여러 상황 요인들을 고려하는 지혜가 필요하다. 업무를 진행함에 있어서도 지나치게 낙관적인 계획을 세우는 사람의 말은 한 번 정도 걸러내고 듣는 마음의 여유를 가질 필요가 있다.
+    <br><br>
+
+    <a></a>
+    [프레임 196-197p] 이미 일어난 일에 대해 당연시하며 그 일이 처음부터 일어날 줄 알았다는 듯이 자신할 때, 우리는 현재 프레임의 희생양이 되는 것이다. 어떤 일이든 쉽게 설명할 수 있기 때문에 자신이 똑똑하다고 생각되겠지만, 그것은 '현재 프레임'이 만들어낸 그럴싸한 포장일 뿐이다.<br>
+    지혜로운 사람이 되기 위해서는 사후에 내리는 모든 판단에 대한 확신을 지금보다 더욱 줄여야 한다. '내 그럴 줄 알았지'라는 말이 튀어나오려고 할 때 '내가 진짜 알았을까?'라고 솔직하게 자문해봐야 한다. '어떻게 이런 결과를 예상하지 못했어?'라고 아랫사람을 문책하기 전에 '정말 나는 그 결과를 예측할 수 있었을까?'라고 다시 자문해보는 지혜가 필요하다.
+    <br><br>
+
+    <a></a>
+    [프레임 179p] 탁월한 사람들 옆에서 시간을 보내다 보면 탁월해질 가능성이 높다. 안주하는 사람들 옆에서 시간을 보내면 안주하는 삶을 살게 될 가능성이 높다. 우리 중 누군가는 탁월함 유발자이고, 누군가는 안주함 유발자인 셈이다.
+    <br><br>
 
     <a></a>
     [프레임 177p] 우리가 가지고 있는 신념과 기대는 먼저 우리의 행동을 바꾼다. 그리고 우리의 행동은 그에 반응하는 타인의 행동을 바꾼다. 우리는 상대방의 행동이나 나 때문이라는 사실을 모른 채 '저 사람은 원래 그렇구나. 내 생각이 맞았어'라고 자신의 신념을 정당화한다. (중략) 이런 악순환의 구조를 심리학에서는 '자기실현적 예언(self-fulfilling prophecy)'이라고 부른다. 기대가 그에 부합하는 현실을 만들어내기 때문에 붙여진 이름이다.<br>
