--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -68,6 +68,24 @@
 
 
 
+
+
+
+  <a></a>
+  교회론 05 (교회의 본무 2 율법을 즐거워 하는 자들) -로마서 10:4<br>
+
+  <a></a>
+  교회론 04 (교회의 본무)-데살로니가전서 4:3-8<br>
+
+  <a></a>
+  교회론 03 (교회의 삶 이 세상에 속하지 않은 하나님 나라)-요한복음 18:36<br>
+
+  <a></a>
+  교회론 02 (교회의 치리)-마태복음 18:15-20<br>
+
+  <a></a>
+  교회론 01 (교회란 무엇인가) -마태복음 16:13-19<br><br>
+
   <a href="https://www.youtube.com/watch?v=sqhOlNCn1b4" target="_blank" title="띵언 저장소">
     억만장자가 말하는 스티브 잡스, 일론 머스크, 워렌 버핏의 공통점</a><br>
 
