--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.112]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.113]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -131,6 +131,7 @@
       [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
       [대한민국 부동산 흐름 읽는법]-신진수<br>
     <h2><strong>역사[Lv.8]</h2></strong>
+      [1일 1페이지 그날 세계사 365]-백재현<br>
       <b>3x[하룻밤에 읽는 영국사]-안병억</b><br>
       [하룻밤에 읽는 한국사]-최용범<br>
       [세상에서 가장 쉬운 세계사]-천레이<br>
@@ -188,9 +189,10 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.8]</h2></strong>
+    <h2><strong>자기계발[Lv.9]</h2></strong>
+      [스틸니스]-라이언 홀리데이<br>
       [나는 4시간만 일한다]-팀 페리스<br>
-      2X[체인저블]-안드레스 피라<br>
+      <b>3X[체인저블]-안드레스 피라</b><br>
       <b>4X[메타인지, 생각의 기술]-오봉근</b><br>
       [정리하는 뇌]-대니얼 J. 레비틴<br>
       [커피 한 잔의 명상으로 10억을 번 사람들]-오시마 준이치<br>
@@ -218,9 +220,10 @@
 
 
 
-
     <p><pre>
-      <h2>2021년 1월 독서</h2>
+      <h2>2021년 2월 독서</h2>
+        <li>자기계발:[스틸니스]-라이언 홀리데이</li>
+        <li>역사:[1일 1페이지 그날 세계사 365]-백재현</li>
         <li>심리:[프레임]-최인철</li>
     </p></pre>
 
